# moai-community

./: .gitignore
cmake/cmake-modules/: module-config.cmake  module-setup.cmake
cmake/hosts/host-linux-sdl/: CMakeLists.txt
cmake/hosts/host-modules/: CMakeLists.txt
cmake/hosts/host-osx-sdl/: CMakeLists.txt
cmake/hosts/host-win-sdl/: CMakeLists.txt
cmake/libmoai/: CMakeLists.txt
cmake/libmoai/moai-imgui/: CMakeLists.txt
plugins/moai-nuklear/cmake/: CMakeLists.txt
plugins/moai-nuklear/moai-nuklear/: moai-nuklear.vcxproj
plugins/moai-nuklear/src/: MOAINuklear.cpp  MOAINuklear.h  host.cpp  host.h  nuklear.h  nuklear_moai.c  nuklear_moai.h
scripts/: build-windows.bat  create-projects-win.bat
